# Cerence-SDK

./: CMakeLists.txt  README.md
data/cbatch/config/: applications_cnc.json  asr_manager.json  batch_job_example.json  call_nancy_brooks.hrl
doc/: readme.txt
doc/user_guide/: .buildinfo  SDK_UserGuide.html  genindex.html  objects.inv  search.html  searchindex.js
doc/user_guide/asr/: .buildinfo  SDK_Asr5_UserGuide.html  genindex.html  objects.inv  search.html  searchindex.js
doc/user_guide/audio/: genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/user_guide/cloudservices/: genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/user_guide/common/: .buildinfo  genindex.html  (+4 more)
inc/linux/: asr_cerence_api.h
inc/nds_asr5/: ApplicationEvent.h  DynamicContentConsumerEvent.h  IApplication.h  IAsrManager.h  IContentValuesIterator.h  IDynamicContentConsumer.h  IDynamicContentConsumerListener.h  IRecognizer.h  IRecognizerListener.h  RecogEvent.h  RecognizerError.h  ResultType.h  asr5_api_defs.h
inc/nds_asr5_cop_file_reader/: ICOPFileReader.h  IContentFormat.h  IPhoneticsConverter.h  ModificationType.h
inc/nds_audio/: AudioData.h  AudioEncoding.h  IAudioInputAdapter.h  IAudioInputAdapterFactory.h  IAudioInputAdapterFactoryListener.h  IAudioInputAdapterListener.h  IAudioManager.h  IAudioModule.h  IAudioOutputAdapter.h  IAudioOutputAdapterFactoryListener.h  IContainerPackerFactory.h  IContainerPackerFactoryListener.h  IContainerUnpacker.h  IContainerUnpackerFactoryListener.h  IDecoder.h  IDecoderFactory.h  IDecoderFactoryListener.h  IEncoder.h  SegmentationState.h  audio_IDiagnosis.h  audio_IDiagnosisListener.h
inc/nds_audio_codec_opus/: IOpusEncoder.h
inc/nds_audio_module_buffer/: IAudioBuffer.h
inc/nds_audio_module_decoder/: IAudioDecoder.h
inc/nds_audio_module_from_file/: IAudioFromFileListener.h
inc/nds_audio_module_output/: IAudioOutput.h
inc/nds_audio_module_segmentation/: IAudioSegmentation.h  IAudioSegmentationListener.h
inc/nds_audio_module_src/: ISampleRateConverter.h
inc/nds_audio_module_sse/: ISpeechSignalEnhancement.h  ISpeechSignalEnhancementListener.h
inc/nds_audio_module_to_file/: FileType.h  IAudioToFile.h  IAudioToFileListener.h
inc/nds_cloudservices/: CloudData.h  CloudDataUploadErrorType.h  ICloudCommandError.h  ICloudCommandJsonListener.h  ICloudCommandListener.h  ICloudCommander.h  ICloudCommanderListener.h  ICloudDataReset.h  ICloudDataResetError.h  ICloudDataResetListener.h  ICloudDataUpload.h  ICloudDataUploadError.h  ICloudDataUploadListener.h  ICloudDataUploadResult.h  ICloudDataUploader.h  ICloudLoggerError.h  ICloudLoggerListener.h  ICloudLoggerResult.h  ICloudManager.h  cloudservices_api_defs.h
inc/nds_common/: ByteArray.h  HeapAllocator.h  IBackgroundOperation.h  IConfiguration.h  IDiagnosisListenerKvpConfig.h  IDiagnosisListenerKvpDiag.h  IDictionary.h  IHeap.h  ILogConsumer.h  ILogConsumerPlugin.h  ILogModule.h  ISequence.h  ISysTrace.h  ISystemManager.h  IThreadAPI.h  ITimer.h  ITimerListener.h  Int64List.h  KeyValuePoolError.h  ResultCode.h  ShortArray.h  StringList.h  StringListList.h  common_api_defs.h  nuance_String.h
inc/nds_prompter/: DiagnosisCallStatus.h  IPromptListener.h  IPrompter.h  LanguageInfoType.h  ParameterType.h  PromptState.h  PromptStateList.h  PrompterError.h  StringParameterType.h  TextSource.h  TextSourceList.h
inc/pal/: lh_ct_assert.h  lh_types.h  starrec_pal_limits.h
platform_wrapper/inc/: linux_wrapper.h  linux_wrapper_cerence.h
platform_wrapper/linux/: CMakeLists.txt
platform_wrapper/linux/inc/: audioout.h  customOutputAdapterFactory.h  mt_semaphore.h
platform_wrapper/linux/src/: audioout.c  customInputAudioAdapter.c  customOutputAdapterFactory.c  customOutputAudioAdapter.c  linux_wrapper_cerence.c  mt_mutex.c
platform_wrapper/src/: linux_wrapper.cpp  linux_wrapper_cerence.c
sample/one_shot_wuw_sample/: Makefile
sdk/: README.md
src/: asr_cerence_api.c
(+6388 files in other folders)
